Fix round info spacing

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     display: flex;
     padding-bottom: 1em;
     justify-content: center;
-    column-gap: 1em;
+    column-gap: 0.4em;
     
 }
 
